Fix floating window background on mobile. (#109)

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -887,6 +887,9 @@ hr {
       }
     }
   }
+  .floating-window {
+    height: fit-content !important;
+  }
   .chat-menu-inner {
     height: 100%;
     display: flex;
